--- a/styles/globals.css
+++ b/styles/globals.css
@@ -211,6 +211,11 @@ a {
   font-weight: 700;
   line-height: 2.15;
 }
+.text-button-2 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 2.17;
+}
 
 
 
@@ -254,5 +259,10 @@ a {
     font-size: 1.4rem;
     font-weight: 700;
     line-height: 2.15;
+  }
+  .breakpoint .text-button-2 {
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 2.17;
   }
 }
