--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,9 +24,30 @@ body {
   font-family:IranSans 
 }
 
+img{
+  border: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+input[type=text],input[type="password"]{
+  width: 100%;
+  height: 4.8rem;
+  padding: 8px;
+  caret-color:var(--color-secondary-500);
+  border:none;
+  color: var(--color-neutral-700);
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 2.15px;
+  border-radius: var(--medium-radius);
+  background-color: var(--color-neutral-200);
+}
+input:focus{
+  border-bottom: 1px solid var(--color-secondary-500);
 }
 
 :root {
@@ -186,6 +207,11 @@ a {
   font-weight: 700;
   line-height: 2.15;
 }
+.text-body-2 {
+  font-size: 1.1rem;
+  font-weight: 400;
+  line-height: 2.17;
+}
 .text-body1-strong {
   font-size: 1.2rem;
   font-weight: 700;
@@ -229,17 +255,17 @@ a {
     font-size: 1.6rem;
     font-weight: 700;
     line-height: 2.15;
-  };
+  }
   .text-body1-strong {
     font-size: 1.4rem;
     font-weight: 700;
     line-height: 2.15;
-  };
+  }
   .text-body-2{
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 2.17;
-  };
+  }
   .text-body2-strong {
     font-size: 1.2rem;
     font-weight: 700;
@@ -260,7 +286,7 @@ a {
     font-weight: 700;
     line-height: 2.15;
   }
-  .breakpoint .text-button-2 {
+  .text-button-2 {
     font-size: 1.2rem;
     font-weight: 700;
     line-height: 2.17;
