--- a/styles/globals.css
+++ b/styles/globals.css
@@ -217,10 +217,20 @@ input:focus{
   font-weight: 700;
   line-height: 2.15;
 }
+.text-body-1 {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 2.15;
+}
 .text-body2-strong {
   font-size: 1.1rem;
   font-weight: 700;
   line-height: 2.17;
+}
+.text-subtitle {
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 2.15;
 }
 .text-subtitle-strong {
   font-size: 1.3rem;
@@ -256,6 +266,11 @@ input:focus{
     font-weight: 700;
     line-height: 2.15;
   }
+  .text-body-1 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.15;
+}
   .text-body1-strong {
     font-size: 1.4rem;
     font-weight: 700;
@@ -270,6 +285,11 @@ input:focus{
     font-size: 1.2rem;
     font-weight: 700;
     line-height: 2.17;
+  }
+  .text-subtitle {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 2.15;
   }
   .text-subtitle-strong {
     font-size: 1.5rem;
