--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,8 @@ html{
 
 body {
   direction: rtl;
-  font-family:IranSans 
+  font-family:IranSans;
+  position: relative;
 }
 
 img{
@@ -48,6 +49,19 @@ input[type=text],input[type="password"]{
 }
 input:focus{
   border-bottom: 1px solid var(--color-secondary-500);
+}
+textarea{
+  width: 100%;
+  height: 9.6rem;
+  padding: 8px;
+  caret-color:var(--color-secondary-500);
+  border:none;
+  color: var(--color-neutral-700);
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 2.15px;
+  border-radius: var(--medium-radius);
+  background-color: var(--color-neutral-200);
 }
 
 :root {
@@ -190,10 +204,20 @@ input:focus{
   color: var(--color-white);
   font-size: 1.4rem;
   font-weight: 700;
-  line-height: 2.15;
   padding: calc(3 * var(--spacing-base)) calc(4 * var(--spacing-base));
   height: 48px;
   width: 100%;
+  border-radius: var(--medium-radius);
+  cursor: pointer;
+}
+.primary-button-outline{
+  background-color: var(--color-white);
+  color: var(--color-button-primary);
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 2.15;
+  width: 100%;
+  border:1px solid var(--color-button-primary);
   border-radius: var(--medium-radius);
   cursor: pointer;
 }
