--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,27 @@
   font-family: IranSans;
   src: url(./../font/IRANSansWeb.ttf);
 } 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  margin-right: 5px;
+  background:transparent; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:#c0c2c5; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #81858b; 
+}
 
 *{ 
   margin: 0;
