change numbers to persian and separate numbers from 3 to 3

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 } 
 @font-face {
 	font-family: IranYekan;
-	src: url('./../font/iranyekanweblight.ttf');
+  src: url('./../font//iranyekanweblightfanum.ttf');
 }
 
 /* width */
