--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@
 	font-family: IranYekan;
   src: url('./../font//iranyekanweblightfanum.ttf');
 }
+@font-face {
+  font-family:Kordi;
+  src: url(./../font/AKORDi.ttf);
+} 
 
 /* width */
 ::-webkit-scrollbar {
@@ -73,6 +77,14 @@ input[type=text],input[type="password"]{
   border-radius: var(--medium-radius);
   background-color: var(--color-neutral-200);
 }
+
+input[type="checkbox"] {
+  width: 1.8rem;
+  height: 1.8rem;
+  border: 0.15rem solid currentColor;
+  border-radius: 0.15em;
+}
+
 input:focus{
   border-bottom: 1px solid var(--color-secondary-500);
 }
