--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,11 @@ a {
   text-decoration: none;
 }
 
+label.require::after{
+  content: "*";
+  color: #ef394e;
+}
+
 input[type=text],input[type="password"]{
   width: 100%;
   height: 4.8rem;
