--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,7 +73,7 @@ label.require::after{
 input[type=text],input[type="password"]{
   width: 100%;
   height: 4.8rem;
-  padding: 8px;
+  padding: 6px;
   caret-color:var(--color-secondary-500);
   border:none;
   color: var(--color-neutral-700);
@@ -108,11 +108,14 @@ textarea{
 }
 select{
   width: 100%;
-  padding: 10px 15px;
-  border:1px solid #bbbaba;
-  color: #606265;
-  font-size: 12px;
-  border-radius: 8px;
+  height: 4.8rem;
+  padding: 6px;
+  border:none;
+  color: var(--color-neutral-700);
+  font-size: 1.3rem;
+  font-weight: 400;
+  border-radius: var(--medium-radius);
+  background-color: var(--color-neutral-200);
 }
 
 :root {
